# df-client

./: .gitignore  API.md  BEADS.md  CLAUDE.md  GUIDE.md  JOURNAL.md  README.md  pyproject.toml
.beads/: issues.jsonl
actions/: building.lua  citizens.lua  combat.lua  dig.lua  jobs.lua  labor.lua  needs.lua  threats.lua  world.lua
experiments/: 01-digging.lua  02-stockpiles.lua  03-workshops.lua  04-farming.lua  05-brewing.lua  06-furniture.lua  07-zones.lua  08-nobles.lua  09-military.lua  10-trading.lua  11-orchestration.lua  README.md
scripts/: citizens.py  cmd.py  daemon.py  idle.py  play.py  q.py  status.py  summary.py  threats.py  unit.py
src/dfclient/: __init__.py  cli.py  client.py  connection.py  daemon.py  models.py
