[project]
name = "dfclient"
version = "0.1.0"
description = "Python client for DFHack RemoteFortressReader API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "protobuf>=5.29.0",
    "pydantic>=2.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dfclient"]

[tool.hatch.build.targets.sdist]
include = ["src/dfclient"]

[tool.uv]
dev-dependencies = []

[tool.uv.sources]

[project.scripts]
dfclient = "dfclient.cli:main"
